@@ -1,10 +1,12 @@
 package com.connect.codeness.global.config;
 
-import com.connect.codeness.global.jwt.JwtFilter;
 import com.connect.codeness.global.handler.OAuth2SuccessHandler;
+import com.connect.codeness.global.jwt.JwtFilter;
 import jakarta.servlet.http.HttpServletResponse;
 import java.util.Arrays;
 import java.util.List;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.boot.autoconfigure.security.servlet.PathRequest;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
@@ -29,6 +31,8 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 @Configuration
 public class SecurityConfig {
 
+	private static final Logger log = LoggerFactory.getLogger(SecurityConfig.class);
+
 	private final JwtFilter jwtFilter;
 	private final OAuth2SuccessHandler oAuth2SuccessHandler;
 
@@ -39,59 +43,36 @@ public class SecurityConfig {
 
 	@Bean
 	public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-		http
-			.cors(corsCustomizer -> corsCustomizer.configurationSource(corsConfigurationSource()))
-			.csrf(AbstractHttpConfigurer::disable)
-			.authorizeHttpRequests(auth -> auth
-				.requestMatchers("/api/**").authenticated()
-				.requestMatchers(
-					"/signup",
-					"/login",
-					"/api/login",
-					"/login-page",
-					"/users/**",
-					"/payment",
-					"/loginPage.html",
-					"/payment.html",
-					"/oauth2/**",
-					"/login/oauth2/code/**",
-					"/favicon.ico",
-					"/error",
-					"/posts/**",
-					"/news",
-					"/mentoring",
-					"/mentoring/**",
-					"/users/schedule"
-				).permitAll()
-				.requestMatchers("/admin/**").hasAuthority("ADMIN")
-				.requestMatchers(HttpMethod.POST, "/mentoring").hasAuthority("MENTOR")
-				.requestMatchers(HttpMethod.DELETE, "/mentoring").hasAuthority("MENTOR")
-				.requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll()
-				.anyRequest().authenticated()
-			)
-			.exceptionHandling(exceptionHandling -> exceptionHandling
-				.authenticationEntryPoint((request, response, authException) -> {
-					// JSON 형식으로 인증 실패 응답
-					response.setContentType("application/json;charset=UTF-8");
-					response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+		log.info("🔒 SecurityFilterChain 설정 시작");
 
-					String errorMessage = "{\"httpStatus\": \"UNAUTHORIZED\", \"statusCode\": 401, \"errors\": {\"UNAUTHORIZED\": \"인증이 필요합니다.\"}}";
-					response.getWriter().write(errorMessage);
-				})
-			)
-			.oauth2Login(oauth2 -> oauth2
-				.loginPage("/loginPage.html")
-				.successHandler(oAuth2SuccessHandler)
-				.failureHandler((request, response, exception) -> {
-					// OAuth2 인증 실패 시 JSON 형식으로 응답
-					response.setContentType("application/json;charset=UTF-8");
-					response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
-
-					String errorMessage = "{\"httpStatus\": \"UNAUTHORIZED\", \"statusCode\": 401, \"errors\": {\"OAUTH2_FAILURE\": \"" + exception.getMessage() + "\"}}";
-					response.getWriter().write(errorMessage);
-				})
-				.userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService()))
-			)
+		http.cors(corsCustomizer -> corsCustomizer.configurationSource(corsConfigurationSource()))
+			.csrf(AbstractHttpConfigurer::disable).authorizeHttpRequests(
+				auth -> auth.requestMatchers("/api/**").authenticated()
+					.requestMatchers("/signup", "/login", "/api/login", "/login-page", "/users/**",
+						"/payment", "/loginPage.html", "/payment.html", "/oauth2/**",
+						"/login/oauth2/code/**", "/favicon.ico", "/error", "/posts/**", "/news",
+						"/mentoring", "/mentoring/**", "/users/schedule").permitAll()
+					.requestMatchers("/admin/**").hasAuthority("ADMIN")
+					.requestMatchers(HttpMethod.POST, "/mentoring").hasAuthority("MENTOR")
+					.requestMatchers(HttpMethod.DELETE, "/mentoring").hasAuthority("MENTOR")
+					.requestMatchers(PathRequest.toStaticResources().atCommonLocations()).permitAll()
+					.anyRequest().authenticated()).exceptionHandling(
+				exceptionHandling -> exceptionHandling.authenticationEntryPoint(
+					(request, response, authException) -> {
+						response.setContentType("application/json;charset=UTF-8");
+						response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+						String errorMessage = "{\"httpStatus\": \"UNAUTHORIZED\", \"statusCode\": 401, \"errors\": {\"UNAUTHORIZED\": \"인증이 필요합니다.\"}}";
+						response.getWriter().write(errorMessage);
+					})).oauth2Login(
+				oauth2 -> oauth2.loginPage("/loginPage.html").successHandler(oAuth2SuccessHandler)
+					.failureHandler((request, response, exception) -> {
+						response.setContentType("application/json;charset=UTF-8");
+						response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+						String errorMessage =
+							"{\"httpStatus\": \"UNAUTHORIZED\", \"statusCode\": 401, \"errors\": {\"OAUTH2_FAILURE\": \""
+								+ exception.getMessage() + "\"}}";
+						response.getWriter().write(errorMessage);
+					}).userInfoEndpoint(userInfo -> userInfo.userService(customOAuth2UserService())))
 			.addFilterBefore(jwtFilter, UsernamePasswordAuthenticationFilter.class);
 
 		return http.build();
@@ -101,8 +82,11 @@ public class SecurityConfig {
 	public OAuth2UserService<OAuth2UserRequest, OAuth2User> customOAuth2UserService() {
 		return new DefaultOAuth2UserService() {
 			@Override
-			public OAuth2User loadUser(OAuth2UserRequest userRequest) throws OAuth2AuthenticationException {
-				return super.loadUser(userRequest);
+			public OAuth2User loadUser(OAuth2UserRequest userRequest)
+				throws OAuth2AuthenticationException {
+				OAuth2User user = super.loadUser(userRequest);
+				log.info("🔑 OAuth2 사용자 정보 로드 성공: {}", user.getName());
+				return user;
 			}
 		};
 	}
@@ -113,21 +97,25 @@ public class SecurityConfig {
 	}
 
 	@Bean
-	public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
+	public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig)
+		throws Exception {
 		return authConfig.getAuthenticationManager();
 	}
 
 	@Bean
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
-		configuration.setAllowedOrigins(List.of("http://localhost:3000"));  // 클라이언트의 실제 URL로 수정
-		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
+		configuration.setAllowedOrigins(
+			List.of("http://localhost:3000", "https://codeness-front.vercel.app/"));
+		configuration.setAllowedMethods(
+			Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
 		configuration.setAllowedHeaders(List.of("*"));
-		configuration.setAllowCredentials(true);  // credentials 허용
-		configuration.setExposedHeaders(List.of("Authorization"));  // Authorization 헤더 노출
+		configuration.setAllowCredentials(true);
+		configuration.setExposedHeaders(List.of("Authorization"));
 
 		UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
 		source.registerCorsConfiguration("/**", configuration);
+		log.info("🌍 CORS 설정 완료");
 		return source;
 	}
 }
